--- a/Web Final Project/webpage1.css
+++ b/Web Final Project/webpage1.css
@@ -5,7 +5,19 @@
 
 body {
     font-family: Verdana, sans-serif;
-    margin: 2%;
+}
+
+.home{
+    background-color: white;
+}
+.scholarship{
+    background-color: rgb(230,104,59);
+    color: white;
+}
+
+nav{
+    padding: 1.5%;
+    background-color: #313238;
 }
 
 .mySlides {
@@ -18,7 +30,6 @@ img {
 
 .main{
     width: 100%;
-    height: 100vh;
     position: relative;
     font-family: sans-serif;
 }
@@ -39,7 +50,7 @@ img {
 
 .navbar .text{
     position: relative;
-    color: darkslategray;
+    color: white;
 }
 
 .navbar .text span{
@@ -56,8 +67,12 @@ ul li a{
     font-size: 16px;
     font-weight: bold;
     text-decoration: none;
-    color: darkslategray;
+    color: white;
     transition: .4s ease;
+}
+
+.ulstart{
+    padding-inline-start: 100px;
 }
 
 ul li a:hover{
@@ -65,6 +80,7 @@ ul li a:hover{
 }
 
 .info h1{
+    padding: 1%;
     font-size: 65px;
     text-align: center;
 }
@@ -142,9 +158,6 @@ ul li a:hover{
     transition: left 0.2s ease;
 }
 
-
-/* here */
-
 .slideshow-container {
   max-width: 500px;
   position: relative;
@@ -154,9 +167,9 @@ ul li a:hover{
 .text {
   color: #f2f2f2;
   font-size: 15px;
-  padding: 8px 12px;
+  padding: 8px 15px;
   position: absolute;
-  text-align: center;
+
 }
 
 .numbertext {
@@ -189,5 +202,3 @@ ul li a:hover{
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
 }
-
-/* here */
