--- a/WebFinalProject/webpage1.css
+++ b/WebFinalProject/webpage1.css
@@ -96,6 +96,23 @@ ul li a:hover{
     color:rgb(230,104,59);
 }
 
+.TLicon{
+    position: relative;
+    height: 55px;
+    width: 55px;
+    padding: 8px;
+    border-radius:40px;
+    right: -500px;
+    background-color: #313238;
+    background-image: url("../WebFinalProject/images/TranslateIconWhite.png");
+    background-size: 55px 55px;
+    transition: .4s ease;
+}
+
+.TLicon:hover{
+    background-image: url("../WebFinalProject/images/TranslateIconOrange.png");
+}
+
 .search-box{
     position: relative;
     background-color: #000;
