--- a/WebFinalProject/webpage1.css
+++ b/WebFinalProject/webpage1.css
@@ -45,8 +45,7 @@ body {
 .footer h5{
     color: #bbb;
     text-align: center;
-    clear: both;
-}
+    clear: both;}
 .footer p{
     padding:0 0 20px 20px;}
 
@@ -121,6 +120,35 @@ form{
 .footer_title {
     margin-bottom: 20px;}
 
+/* ICONS */
+
+.icons{
+    float: right;
+}
+
+.twitter-icon{
+    display: inline-block;
+    text-align: center;
+    width: 55.33px;
+    height: 45px;
+    background-image: url('../WebFinalProject/images/twitter-icon-white.png');
+    background-size: 50px;
+    background-repeat: no-repeat;
+    transition: .2s ease-out;
+}
+.twitter-icon:hover{
+    background-image: url('../WebFinalProject/images/twitter-icon-blue.png');
+    background-size: 50px;
+    background-repeat: no-repeat;
+    transition: .2s ease-in;
+}
+.icon-btn{
+    background: transparent;
+    background-size: 50px;
+    border: 0;
+    height: 50px;
+    width: 65px;
+}
 
 /*  ##################
     -----ELEMENTS-----
