--- a/WebFinalProject/webpage1.css
+++ b/WebFinalProject/webpage1.css
@@ -253,7 +253,7 @@ nav{
     width: 0px;} */
 
 /* -----SLIDESHOW----- */
-
+/* 
 .mySlides {
     display: none;}
 .slideshow-container {
@@ -278,4 +278,4 @@ nav{
   background-color: #717171;}
 .fade {
     animation-name: fade;
-    animation-duration: 2s;}
+    animation-duration: 2s;} */
