--- a/css/nav.css
+++ b/css/nav.css
@@ -107,7 +107,44 @@ h3{
 }
 
 
+/* .blog-text1{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    width: 348px;
+    height: 131.2px;
+}
+.blog-text1 span{
+    color: #f33c3c;
+    font-size: 0.9rem;
+    margin-top: -1em;
+    text-align: center;
+}
+.blog-text1 .blog-title{
+    font-size: 1.3rem;
+    font-weight: 500;
+    color: #272727;
+    margin-top: 1em;
+    text-align: center;
+}
 
+.blog-text1 p{
+    color: #9b9b9b;
+    font-size: 0.9rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 20px 0px;
+}
+.blog-text1 a{
+    color: #0f0f0f;
+}
+.blog-text1 a:hover{
+    color: #c74242;
+    transition: all ease 0.3s;
+} */
 
 .overline {
 text-decoration: overline;
@@ -148,17 +185,41 @@ margin-left: auto;
     overflow: visible;
     text-align: center;
     height: 5px;
-    margin-top:-550px;
+    margin-top:-540px;
     width: 23%;
     line-height: 0.7em;
     padding:0 10px;
     font-size: 20pt;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .hr1:after {
     background: #fff;
     content: 'Master/PHD';
+    padding: 0 10px;
+    position: relative;
+    top: -10px;
+    
+}
+
+.hr2 {
+    border: none;
+    border-top: 1px solid #333;
+    color: #333;
+    overflow: visible;
+    text-align: center;
+    height: 5px;
+    margin-top:-570px;
+    width: 23%;
+    line-height: 0.7em;
+    padding:0 10px;
+    font-size: 20pt;
+    font-weight: 700;
+}
+
+.hr2:after {
+    background: #fff;
+    content: 'Undergraduate';
     padding: 0 10px;
     position: relative;
     top: -10px;
