--- a/css/home.css
+++ b/css/home.css
@@ -25,8 +25,51 @@ a{
     background-color: white;}
 .scholarship{
     background-color: rgb(230,104,59);
-    color: white;}
-
+    color: white;
+    width: 100%;
+    }
+.events{
+    background-color: #868686;
+    color: white;
+    width: 100%;
+}
+.Tcenter{
+    padding: 3%;
+    text-align: center;
+}
+.Sbutton{
+    position: relative;
+    display: inline-block;
+    padding: 14px 28px;
+    width: auto;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    line-height: normal;
+    border: 1px solid transparent;
+    border-radius: 0;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: .2em;
+    background-color: transparent;
+    color: white;
+    border-color: white;
+    transition: .3s ease-out;}
+.HomeSch{
+    display: inline-block;
+    text-align: center;
+    width: 500px;
+    height: 500px;
+    background-image: url('../images/HomeScholarship-white-01.png');
+    background-size: 500px;
+    background-repeat: no-repeat;
+    transition: .2s ease-out;}
+.HomeSch:hover{
+    background-image: url('../images/HomeScholarship-orange-01.png');
+    background-size: 500px;
+    background-repeat: no-repeat;
+    transition: .2s ease-in;
+    transform: scale(1.05);
+}
 
 /*  -----FOOTER-----
     ############### */
@@ -124,8 +167,7 @@ form{
 
 /* -----TWITTER----- */
     .clear{
-        clear: right;
-    }
+        clear: right;}
     .icons{
         float: right;
         padding-bottom: 10px;}
@@ -206,10 +248,11 @@ vertical-align: middle;}
 .homelist ul li a:hover{
     color:rgb(230,104,59);}
 .info h1{
-    padding: 1%;
+    padding-top: 45px;
     font-size: 65px;
     text-align: center;}
 .info h3{
+    padding: 1%;
     font-size: 18px;
     letter-spacing: 0.5px;
     line-height: 28px;
